# ssm

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/parts/: README.md
assets/parts/lego/3001/: connectors.json  lattice.json  part.toml
assets/parts/lego/3002/: connectors.json  lattice.json  part.toml
assets/parts/lego/3003/: connectors.json  lattice.json  part.toml
assets/parts/lego/3004/: connectors.json  lattice.json  part.toml
assets/parts/lego/3004/visual/: README.md  materials.json
src/: connectors.rs  lattice.rs  lib.rs  loader.rs  main.rs  part.rs  world.rs
src/visuals/: app.rs  axis.wgsl  camera.rs  camera_controller.rs  grid.rs  mod.rs  renderer.rs  units.rs
