[package]
name = "ssm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
anyhow = "1"
winit = "0.30"
wgpu = "0.20"
pollster = "0.3"
glam = "0.28"
bytemuck = { version = "1.15", features = ["derive"] }

[dev-dependencies]
